# kids-math

./: .gitignore  Makefile  README.md  dashboard.py  dashboard_requirements.txt
.github/workflows/: deploy-pages.yml  release.yml
backend/: .gitignore  Cargo.toml  schema.sql
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  pokemonNames.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
